# materialized-view

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md
datalog-syntax/: Cargo.toml
datalog-syntax/src/: lib.rs
datalog_rule_macro/: Cargo.toml
datalog_syntax/: Cargo.toml
datalog_syntax/src/: lib.rs
datalog_syntax_macros/: Cargo.toml
datalog_syntax_macros/src/: lib.rs
datalog_syntax_macros/tests/: rule.rs
src/: bin.rs  builders.rs  engine.rs  evaluation.rs  interning.rs  lib.rs  rewriting.rs
src/builders/: fact.rs  goal.rs  rule.rs
src/engine/: compute.rs  datalog.rs  encoding.rs  interning.rs  query.rs  rewrite.rs  storage.rs
src/evaluation/: benchmark_maker.rs  evaluator.rs  loader.rs
src/interning/: hash.rs  herbrand_universe.rs  interned_datalog_structures.rs  rule.rs
src/rewriting/: atom.rs  rewrite.rs
