[package]
name = "materialized-view"
version = "0.1.0"
edition = "2021"

[dependencies]
datalog_syntax = { path = "datalog_syntax" }
datalog_syntax_macros = { path = "datalog_syntax_macros" }
indexmap = { version = "2.1.0" }
dbsp = "0.2.0"
ahash = "0.8.11"
identity-hash="0.1.0"
dashmap = "5.5.3"
boxcar = "0.2.4"
sharded-slab = "0.1.7"
once_cell = "1.19.0"