[package]
name = "materialized-view"
version = "0.1.0"
edition = "2021"
documentation = "https://docs.rs/materialized-view/"
repository = "https://github.com/brurucy/materialized-view"
license = "Apache-2.0"
description = "Simple incremental materialized views for the masses."
keywords = ["rdf", "property-graph", "datalog", "dbsp", "differential"]
categories = ["algorithms", "database-implementations"]
readme = "README.md"

[dependencies]
datalog_syntax = { path = "datalog_syntax", version = "0.1.0" }
datalog_syntax_macros = { path = "datalog_syntax_macros", version = "0.1.0" }
indexmap = { version = "2.1.0" }
indexset = { version = "0.4.0"}
dbsp = { version = "0.2" }
identity-hash="0.1.0"
once_cell = "1.19.0"
ahash = "0.8.11"
byteorder = "1.5.0"
internment = { version="0.8.4", features = ["arena"] }
sharded-slab = "0.1.1"
rkyv = "0.7.44"
size-of = "0.1.5"
serde = { version = "1.0.193", features = ["derive"] }